--- a/src/PreventiveMaintainanceChart/PreventiveMaintainanceChart.css
+++ b/src/PreventiveMaintainanceChart/PreventiveMaintainanceChart.css
@@ -77,3 +77,16 @@ textarea.form-control {
   padding: 0.25rem 0.5rem;
   font-size: 0.875rem;
 }
+
+
+
+
+.action-icon {
+  font-size: 1.1rem;
+  cursor: pointer;
+  transition: transform 0.2s ease;
+}
+
+.action-icon:hover {
+  transform: scale(1.2);
+}
