--- a/src/ServicePool/ServicePool.css
+++ b/src/ServicePool/ServicePool.css
@@ -266,6 +266,7 @@ h2 {
 .action-icons {
   display: flex;
   gap: 12px;
+  margin-top: 18px;
 }
 
 .icon {
@@ -326,19 +327,7 @@ h2 {
   cursor: not-allowed;
 }
 
-/* Modal styles */
-/* .modal-overlay {
-  position: fixed;
-  top: 0;
-  left: 0;
-  right: 0;
-  bottom: 0;
-  background: rgba(0, 0, 0, 0.5);
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 1000;
-} */
+
 
 .modal-content {
   background: white;
@@ -559,3 +548,7 @@ h2 {
     padding: 15px;
   }
 }
+
+
+
+
