--- a/src/ServicePool/ServicePool.css
+++ b/src/ServicePool/ServicePool.css
@@ -370,7 +370,7 @@ h2 {
 .form-grid {
   display: grid;
   grid-template-columns: repeat(2, 1fr);
-  gap: 20px;
+  /* gap: 20px; */
   margin-bottom: 20px;
 }
 
