--- a/src/ServiceItems/NewServiceItem.css
+++ b/src/ServiceItems/NewServiceItem.css
@@ -266,7 +266,8 @@
 .table-responsive {
   margin-top: 20px;
   border-radius: 8px;
-  overflow: hidden;
+  /* overflow: hidden; */
+    overflow-x: auto; 
   box-shadow: 0 0 12px rgba(0, 0, 0, 0.05);
 }
 
