--- a/src/Customer/NewCustomer.css
+++ b/src/Customer/NewCustomer.css
@@ -164,3 +164,12 @@
   background-color: #6c757d;
   color: white;
 }
+
+
+.table
+.new-customer-table-header th {
+  color: #20555c;
+  background-color: #C9FDF2;
+  font-weight: bold;
+  text-align: center;
+}
