--- a/src/ServiceItems/NewServiceItem.css
+++ b/src/ServiceItems/NewServiceItem.css
@@ -305,3 +305,12 @@
 .mb-3 {
   margin-bottom: 1rem;
 }
+
+
+.table
+.service-item-table-header th {
+  color: #20555c;
+  background-color: #C9FDF2;
+  font-weight: bold;
+  text-align: center;
+}
