--- a/src/ServiceItems/NewServiceItem.css
+++ b/src/ServiceItems/NewServiceItem.css
@@ -158,7 +158,7 @@
 .service-item-container {
   background-color: #fff;
   padding: 25px;
-  max-width: 1200px;
+  /* max-width: 1200px; */
   margin: 40px auto;
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.05);
