--- a/src/PreventiveMaintainanceChart/PreventiveMaintainanceChart.css
+++ b/src/PreventiveMaintainanceChart/PreventiveMaintainanceChart.css
@@ -93,8 +93,8 @@ textarea.form-control {
 
 .table
 .pm-chart-table-header th {
-  color: #20555c;
-  background-color: #C9FDF2;
+  color: #fcfefe;
+  background-color: #0096D6;
   font-weight: bold;
   text-align: left;
 }
