--- a/src/ServiceItems/NewServiceItem.css
+++ b/src/ServiceItems/NewServiceItem.css
@@ -309,8 +309,8 @@
 
 .table
 .service-item-table-header th {
-  color: #20555c;
-  background-color: #C9FDF2;
+  color: white;
+ background-color: #0096D6;
   font-weight: bold;
   text-align: left;
 }
