--- a/src/ServicePool/ServicePool.css
+++ b/src/ServicePool/ServicePool.css
@@ -386,10 +386,11 @@ h2 {
 
 .history-header {
   display: flex;
-  background-color: #C9FDF2;;
+  background-color: #0096D6;;
   padding: 0.75rem;
   font-weight: bold;
   border-radius: 8px;
+  color: white;
 }
 
 .history-row {
@@ -673,8 +674,8 @@ h2 {
 
 .table
 .service-pool-table-header th {
-  color: #20555c;
-  background-color: #C9FDF2;
+  color: white;
+  background-color: #0096D6;
   font-weight: bold;
-  text-align: center;
+  text-align: left;
 }
