--- a/src/Login/SignupSetPassword.css
+++ b/src/Login/SignupSetPassword.css
@@ -204,3 +204,59 @@
   font-size: 16px;
   cursor: pointer;
 }
+
+
+
+
+
+.set-input-wrapper {
+  background-color: #f0f4f8;
+  border-radius: 12px;
+  padding: 12px 15px;
+  margin: 15px 0;
+  display: flex;
+  align-items: center;
+  transition: all 0.3s ease;
+  gap:10px;
+}
+
+.pass-input {
+  border: none;
+  background: transparent;
+  font-size: 16px;
+  width: 100%;
+  outline: none;
+  padding-left: 10px;
+  text-align: center;
+  letter-spacing: 2px;
+}
+
+
+
+
+.setpass-submit-button {
+  width: 100%;
+  background-color: #0096d6;
+  padding: 15px;
+  border-radius: 12px;
+  border: none;
+  color: white;
+  font-weight: bold;
+  font-size: 16px;
+  cursor: pointer;
+}
+.eye-icon {
+  position: absolute;
+  right: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  cursor: pointer;
+  color: #555;
+}
+
+.set-input-wrapper {
+  position: relative;
+  display: flex;
+  align-items: center;
+  margin-bottom: 20px;
+}
