--- a/src/App.css
+++ b/src/App.css
@@ -27,7 +27,11 @@
 
 .nav-links {
   display: flex;
-  gap: 20px;
+  align-items: center;
+  gap: 15px;
+  flex-wrap: nowrap;
+  /* overflow-x: auto; */
+  white-space: nowrap;
 }
 
 .nav-links a {
