--- a/src/Customer/NewCustomer.css
+++ b/src/Customer/NewCustomer.css
@@ -177,7 +177,7 @@
 
 
 .service-request-form {
-    background-color: #f4f6f9;
+    /* background-color: #f4f6f9; */
     font-family: 'Poppins', sans-serif;
 }
 
