--- a/src/PreventiveMaintainanceGroup/PreventiveMaintainance.css
+++ b/src/PreventiveMaintainanceGroup/PreventiveMaintainance.css
@@ -33,7 +33,7 @@
 /* Add these to your existing CSS */
 .pm-subtitle {
   color: #6c757d;
-  margin-bottom: 20px;
+  /* margin-bottom: 20px; */
   text-align: left;
 }
 
@@ -46,7 +46,7 @@
 
 .table {
   margin-bottom: 0;
-  font-size: 14px;
+  /* font-size: 14px; */
 }
 
 .table th {
@@ -91,7 +91,7 @@
 
 
 .service-request-form {
-    background-color: #f4f6f9;
+    /* background-color: #f4f6f9; */
     font-family: 'Poppins', sans-serif;
 }
 
