--- a/src/ServiceItems/NewServiceItem.css
+++ b/src/ServiceItems/NewServiceItem.css
@@ -277,7 +277,7 @@
 }
 
 .table th {
-  background-color: #343a40;
+  background-color: #0096d6;
   color: white;
   font-weight: 500;
   vertical-align: middle;
