--- a/src/ServicePool/ServicePool.css
+++ b/src/ServicePool/ServicePool.css
@@ -197,7 +197,7 @@ h2 {
 .service-container {
   padding: 20px;
   font-family: 'Arial', sans-serif;
-  margin: 40px auto;
+  margin-top: 1%;
 }
 
 h2 {
