--- a/src/PreventiveMaintainanceChart/PreventiveMaintainanceChart.css
+++ b/src/PreventiveMaintainanceChart/PreventiveMaintainanceChart.css
@@ -2,7 +2,7 @@
   background-color: #fff;
   padding: 30px;
   border-radius: 12px;
-  max-width: 1400px;
+  /* max-width: 1400px; */
   margin: 40px auto;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.07);
 }
